fixed file structure

--- a/public/index.css
+++ b/public/index.css
@@ -9,31 +9,31 @@ body {
 }
 
 #bg-1 {
-    background-image: url("public/bg-1.png");
+    background-image: url("images/bg-1.png");
 }
 #bg-2 {
-    background-image: url("public/bg-2.png");
+    background-image: url("images/bg-2.png");
 }
 #bg-3 {
-    background-image: url("public/bg-3.png");
+    background-image: url("images/bg-3.png");
 }
 #bg-4 {
-    background-image: url("public/bg-4.png");
+    background-image: url("images/bg-4.png");
 }
 #bg-5 {
-    background-image: url("public/bg-5.png");
+    background-image: url("images/bg-5.png");
 }
 #bg-6 {
-    background-image: url("public/bg-6.png");
+    background-image: url("images/bg-6.png");
 }
 #bg-7 {
-    background-image: url("public/bg-7.png");
+    background-image: url("images/bg-7.png");
 }
 #bg-8 {
-    background-image: url("public/bg-8.png");
+    background-image: url("images/bg-8.png");
 }
 #bg-9 {
-    background-image: url("public/bg-9.png");
+    background-image: url("images/bg-9.png");
 }
 
 h1 {
